# serializer version: 1
# name: test_switch_setup[fc_data0][switch.mock_title_port_forward_test_port_mapping-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data0][switch.mock_title_port_forward_test_port_mapping-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data0][switch.mock_title_port_forward_test_port_mapping_81-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping 81',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping 81',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping_81',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data0][switch.mock_title_port_forward_test_port_mapping_81-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping 81',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data0][switch.mock_title_wi_fi_guest-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Guest',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Guest',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_guest',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_guest',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data0][switch.mock_title_wi_fi_guest-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Guest',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data0][switch.mock_title_wi_fi_main_2_4ghz-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Main 2.4Ghz',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Main 2.4Ghz',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_main_2_4ghz',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_main_2_4ghz',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data0][switch.mock_title_wi_fi_main_2_4ghz-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Main 2.4Ghz',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data0][switch.printer_internet_access-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.printer_internet_access',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Internet access',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Internet access',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'internet_access',
    'unique_id': 'AA:BB:CC:00:11:22_internet_access',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data0][switch.printer_internet_access-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'printer Internet access',
    }),
    'context': <ANY>,
    'entity_id': 'switch.printer_internet_access',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_port_forward_test_port_mapping-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_port_forward_test_port_mapping-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_port_forward_test_port_mapping_81-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping 81',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping 81',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping_81',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_port_forward_test_port_mapping_81-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping 81',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_wi_fi_guest-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Guest',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Guest',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_guest',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_guest',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_wi_fi_guest-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Guest',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_wi_fi_main_2_4ghz-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Main 2.4Ghz',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Main 2.4Ghz',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_main_2_4ghz',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_main_2_4ghz',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data1][switch.mock_title_wi_fi_main_2_4ghz-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Main 2.4Ghz',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data1][switch.printer_internet_access-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.printer_internet_access',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Internet access',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Internet access',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'internet_access',
    'unique_id': 'AA:BB:CC:00:11:22_internet_access',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data1][switch.printer_internet_access-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'printer Internet access',
    }),
    'context': <ANY>,
    'entity_id': 'switch.printer_internet_access',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_port_forward_test_port_mapping-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_port_forward_test_port_mapping-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_port_forward_test_port_mapping_81-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping 81',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping 81',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping_81',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_port_forward_test_port_mapping_81-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping 81',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_wi_fi_guest-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Guest',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Guest',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_guest',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_guest',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_wi_fi_guest-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Guest',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_wi_fi_main_2_4ghz-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Main 2.4Ghz',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Main 2.4Ghz',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_main_2_4ghz',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_main_2_4ghz',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data2][switch.mock_title_wi_fi_main_2_4ghz-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Main 2.4Ghz',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data2][switch.printer_internet_access-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.printer_internet_access',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Internet access',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Internet access',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'internet_access',
    'unique_id': 'AA:BB:CC:00:11:22_internet_access',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data2][switch.printer_internet_access-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'printer Internet access',
    }),
    'context': <ANY>,
    'entity_id': 'switch.printer_internet_access',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_call_deflection_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_call_deflection_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Call deflection 0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:phone-forward',
    'original_name': 'Call deflection 0',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-call_deflection_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_call_deflection_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'deflection_to_number': '+1234657890',
      'friendly_name': 'Mock Title Call deflection 0',
      'icon': 'mdi:phone-forward',
      'mode': 'Immediately',
      'number': None,
      'outgoing': None,
      'phonebook_id': None,
      'type': 'fromAll',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_call_deflection_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_port_forward_test_port_mapping-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_port_forward_test_port_mapping-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_port_forward_test_port_mapping_81-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Port forward Test Port Mapping 81',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:check-network',
    'original_name': 'Mock Title Port forward Test Port Mapping 81',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1C:ED:6F:12:34:11-port_forward_test_port_mapping_81',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_port_forward_test_port_mapping_81-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Port forward Test Port Mapping 81',
      'icon': 'mdi:check-network',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_port_forward_test_port_mapping_81',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_wi_fi_guest-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Guest',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Guest',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_guest',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_guest',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_wi_fi_guest-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Guest',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_guest',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_wi_fi_main_2_4ghz-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mock Title Wi-Fi Main 2.4Ghz',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Mock Title Wi-Fi Main 2.4Ghz',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wi_fi_main_2_4ghz',
    'unique_id': '1C:ED:6F:12:34:11-wi_fi_main_2_4ghz',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data3][switch.mock_title_wi_fi_main_2_4ghz-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Wi-Fi Main 2.4Ghz',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_title_wi_fi_main_2_4ghz',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[fc_data3][switch.printer_internet_access-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.printer_internet_access',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Internet access',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Internet access',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'internet_access',
    'unique_id': 'AA:BB:CC:00:11:22_internet_access',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[fc_data3][switch.printer_internet_access-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'printer Internet access',
    }),
    'context': <ANY>,
    'entity_id': 'switch.printer_internet_access',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
